--- a/css/styles.css
+++ b/css/styles.css
@@ -23,12 +23,20 @@ header {
   font-weight: 700;
 }
 
+#logo-link {
+  text-decoration: none;
+}
+
 .menu a {
   color: white;
   text-decoration: none;
   text-transform: uppercase;
   padding: 0 10px;
   transition: 0.4s;
+}
+
+.menu a:hover {
+  color: #6cc091;
 }
 
 .mostrar-menu,
@@ -44,7 +52,6 @@ header {
   order: 1;
 }
 
-.menu a:hover,
 .mostrar-menu:hover,
 .esconder-menu:hover {
   background-color: #6cc091;
@@ -52,6 +59,61 @@ header {
 
 #check {
   display: none;
+}
+
+/* Estilos del banner */
+#banner {
+  padding: 0 50px;
+  background-image: url(/pictures/banner.jpg);
+  height: 80vh;
+  background-size: cover;
+  background-position: center;
+}
+
+/* Aca se agrega la capa de niebla sobre el banner */
+#banner::before {
+  content: "";
+  background: rgba(77,77,92,0.6);
+  position: absolute;
+  width: 100%;
+  height: 80vh;
+  left: 0;
+}
+
+.contenido-banner h3 {
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 600;
+  padding: 10px 0;
+}
+
+.contenido-banner h3 span {
+  font-weight: 800;
+}
+
+.contenido-banner {
+  position: relative;
+  height: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.boton-banner {
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  border: solid 1px #6cc091;
+  padding: 20px 40px;
+  /* La siguiente linea se usa para que un bloque no ocupe todo el ancho de la pantalla, sino las medidas que se le asignen*/
+  align-self: baseline;
+}
+
+.boton-banner:hover {
+  background-color: #6cc09070;
+  transition: 0.4s;
 }
 
 /* Aca se aplican los estilos para el responsive */
