--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,66 @@ header {
   transition: 0.4s;
 }
 
+#servicios {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.responsive {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px 10px;
+}
+
+.responsive img {
+  padding-bottom: 15px;
+}
+
+.responsive p {
+  padding: 20px 0;
+}
+
+.optimizacion-seo {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px 10px;
+}
+
+.optimizacion-seo img {
+  padding-bottom: 15px;
+  
+}
+
+.optimizacion-seo p {
+  padding: 20px 0;
+}
+
+#servicios a{
+  text-decoration: none;
+  color: #6cc091;
+  border: solid 1px #6cc091;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 20px 40px;
+}
+
+#servicios a:hover {
+  background-color: #6cc091;
+  color: white;
+  transition: 0.4s;
+}
+
+
 /* Aca se aplican los estilos para el responsive */
 
 @media(max-width:768px) {
