--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ header {
   justify-content: space-evenly;
 }
 
-.responsive {
+.tarjetas {
   display: flex;
   flex-direction: column;
   width: 25%;
@@ -132,30 +132,11 @@ header {
   padding: 50px 10px;
 }
 
-.responsive img {
+.tarjetas img {
   padding-bottom: 15px;
 }
 
-.responsive p {
-  padding: 20px 0;
-}
-
-.optimizacion-seo {
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 50px 10px;
-}
-
-.optimizacion-seo img {
-  padding-bottom: 15px;
-  
-}
-
-.optimizacion-seo p {
+.tarjetas p {
   padding: 20px 0;
 }
 
@@ -212,5 +193,14 @@ header {
   /* Con esta propiedad se abre y cierra el menu en pantallas pequeñas */
   #check:checked ~ .menu {
     right: 0;
+  }
+
+  #servicios {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .tarjetas {
+    width: 50%;
   }
 }
