--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   scroll-behavior: smooth;
 }
 
-/* Estilos del Header*/
+/* Estilos aplicados al Header*/
 header {
   height: 100px;
   background-color: #4d4d5c;
